--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/714c299eb4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chat | Kakao Clone</title>
 </head> 
 <body>
@@ -15,14 +16,14 @@
             <i class="fas fa-clock"></i>            
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100</span>
+            <span class="status-bar__battery-level">100%</span>
             <i class="fas fa-battery-full"></i>
         </div>
     </div>
     <header class="header">
         <div class="header__header-column">
-            <a href="index.html">
-                <i class="fas fa-arrow-left fa-2x"></i>
+            <a href="index.html" class="header__back-btn">
+                <i class="fas fa-arrow-left"></i>
             </a>
             <h1 class="header__title">Best Friend</h1>
         </div>
@@ -30,9 +31,9 @@
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <div class="header__icon">
+            <span class="header__icon">
                 <i class="fas fa-bars"></i>
-            </div>
+            </span>
         </div>
     </header>
     <main class="chat">
