--- a/find.html
+++ b/find.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/714c299eb4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Find | Kakao Clone</title>
 </head> 
 <body>
@@ -15,7 +16,7 @@
             <i class="fas fa-clock"></i>            
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100</span>
+            <span class="status-bar__battery-level">100%</span>
             <i class="fas fa-battery-full"></i>
         </div>
     </div>
@@ -73,12 +74,12 @@
             <h5 class="find__title">
                 Recommended friends
             </h5>
-            <li class="friends__friend find-friend">
+            <li class="friends__friend friend find-friend">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            IU
+                            Maka
                         </span>
                     </div>
                 </div>
