--- a/friends.html
+++ b/friends.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/714c299eb4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Friends | Kakao Clone</title>
 </head> 
 <body>
@@ -15,7 +16,7 @@
             <i class="fas fa-clock"></i>            
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100</span>
+            <span class="status-bar__battery-level">100%</span>
             <i class="fas fa-battery-full"></i>
         </div>
     </div>
@@ -36,10 +37,10 @@
         <header class="friends__header">
             <div class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Moongyeong
+                            Maka 
                         </span>
                         <span class="friend__status">
                             Its me!
@@ -52,7 +53,7 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -65,7 +66,7 @@
             <h5 class="friends__title">Friends 14</h5>
             <li class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Friend
