--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/714c299eb4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chats | Kakao Clone</title>
 </head> 
 <body>
@@ -15,7 +16,7 @@
             <i class="fas fa-clock"></i>            
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100</span>
+            <span class="status-bar__battery-level">100%</span>
             <i class="fas fa-battery-full"></i>
         </div>
     </div>
@@ -39,17 +40,23 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="images/avatar.jpg"/>
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Lynn
-                            </span>
-                            <span class="chat__preview">Going home</span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="images/avatar.jpg" class="m-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going Home!
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">
+                                Yesterday
+                            </div>
+                        </div>
                     </div>
                 </a>
             </li>
@@ -64,6 +71,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
@@ -75,7 +83,8 @@
             <li class="nav__list-item">
                 <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
-                </a></li>
+                </a>
+            </li>
 
         </ul>
     </nav>
