--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/714c299eb4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>More | Kakao Clone</title>
 </head> 
 <body>
@@ -15,7 +16,7 @@
             <i class="fas fa-clock"></i>            
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <span class="status-bar__battery-level">100</span>
+            <span class="status-bar__battery-level">100%</span>
             <i class="fas fa-battery-full"></i>
         </div>
     </div>
@@ -44,7 +45,7 @@
                     <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Moongyeong
+                            Maka
                         </span>
                         <span class="friend__status">
                             abcd@gmail.com
