--- a/find.html
+++ b/find.html
@@ -40,7 +40,7 @@
                     <span class="header-btn__icon">
                         <i class="fas fa-qrcode fa-2x"></i>
                     </span>
-                    <span class="header-btn__Title">
+                    <span class="header-btn__title">
                         QR Code
                     </span>
                 </li>
@@ -48,7 +48,7 @@
                     <span class="header-btn__icon">
                         <i class="fas fa-user-plus fa-2x"></i>
                     </span>
-                    <span class="header-btn__Title">
+                    <span class="header-btn__title">
                         Add by Contact
                     </span>
                 </li>           
@@ -56,7 +56,7 @@
                     <span class="header-btn__icon">
                         <i class="fas fa-passport fa-2x"></i>
                     </span>
-                    <span class="header-btn__Title">
+                    <span class="header-btn__title">
                         Add by ID
                     </span>
                 </li> 
@@ -64,7 +64,7 @@
                     <span class="header-btn__icon">
                         <i class="far fa-envelope fa-2x"></i>
                     </span>
-                    <span class="header-btn__Title">
+                    <span class="header-btn__title">
                         Invite
                     </span>
                 </li>         
