--- a/settings.html
+++ b/settings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/714c299eb4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Settings | Kakao Clone</title>
 </head> 
 <body>
@@ -21,7 +22,7 @@
     </div>
     <header class="header">
         <div class="header__header-column">
-            <a href="more.html">
+            <a href="more.html" class="header__back-btn">
                     <i class="fas fa-arrow-left fa-2x"></i>
             </a>
             <h1 class="header__title">Settings</h1>
@@ -32,7 +33,7 @@
             </span>
         </div>
     </header>
-    <main class="settins">
+    <main class="settings">
         <section class="settings__sections">
             <ul class="setting__list">
                 <li class="settings__setting">
