--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Chat | Kakao Clone</title>
 </head> 
-<body>
+<body class="chats-body">
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:54</span>
@@ -36,25 +36,25 @@
             </span>
         </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Wednesday, June 17, 2020</span>
             <li class="incoming-message message">
                 <img src="images/avatar.jpg" class="g-avatar message__avatar" />
                 <div class="message__content">
                     <span class="message__author">Best Friend</span>
-                    <div class="message__Bubble">
+                    <span class="message__bubble">
                         Congrats I luv u!
-                    </div>
+                    </span>
                 </div>
                 <span class="message__timestamp"></span>
             </li>
-            <li class="incoming-message message">
+            <li class="sent-message message">
                 <span class="message__timestamp"></span>
                 <div class="message__content">
-                    <div class="message__Bubble">
+                    <span class="message__bubble">
                         Me too!
-                    </div>
+                    </span>
                 </div>
             </li>
         </ul>
