--- a/friends.html
+++ b/friends.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span>FTISLAND</span>
+                        <span>지독하게 - FTISLAND</span>
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
