--- a/more.html
+++ b/more.html
@@ -87,15 +87,21 @@
             <h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
-                    <i class="fas fa-quote-right fa-2x"></i>
+                    <span class="suggestion__icon">
+                        <i class="fas fa-quote-right fa-2x"></i>
+                    </span>
                     <span class="suggestion__title">Kakao Story</span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <i class="fas fa-beer fa-2x"></i>
+                    <span class="suggestion__icon">
+                        <i class="fas fa-beer fa-2x"></i>
+                    </span>
                     <span class="suggestion__title">Kakao friends</span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <i class="fas fa-gamepad fa-2x"></i>
+                    <span class="suggestion__icon">
+                        <i class="fas fa-gamepad fa-2x"></i>
+                    </span>
                     <span class="suggestion__title">Friends Germ</span>
                 </li>
             </ul>
