--- a/more.html
+++ b/more.html
@@ -116,6 +116,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="far fa-comment"></i>
                 </a>
             </li>
@@ -131,5 +132,8 @@
 
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 </html> 
